# libakcpp

./: .clang-tidy  .gitignore  CMakeLists.txt  package.json
include/ak/: base.h  chalk.h  compare.h  validator.h
include/ak/_internals/: chalk.inc  chalk.inc.gen.mjs
include/ak/file/: array.h  bptree.h  file.h  set.h  varchar.h
include/ak/validator/: base.h  expect.h
include/ak/validator/_internals/: common.h  string.h  validator.h
src/ak/: base.cpp  chalk.cpp  chalk_test.cpp  compare_test.cpp  validator_test.cpp
src/ak/_internals/: chalk.inc  chalk.inc.gen.mjs
src/ak/validator/_internals/: common.cpp  string.cpp  string_test.cpp
